--- a/package.json
+++ b/package.json
@@ -3,12 +3,28 @@
   "displayName": "cs50-theme-harvard",
   "description": "cs50 light theme",
   "version": "0.0.1",
+  "publisher": "whitehat4u",
   "engines": {
     "vscode": "^1.86.0"
   },
   "categories": [
     "Themes"
   ],
+  "icon": "images/128.png",
+  "keywords": [
+    "cs50",
+    "cs50-theme-vs",
+    "theme cs50",
+    "juanpumpkinpie",
+    "krakow",
+    "cs50-color-theme",
+    "light",
+    "high-contrast"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/juanpumpkinpie/cs50-theme-harvard"
+  },
   "contributes": {
     "themes": [
       {
